@@ -1146,6 +1146,9 @@ class UTIL
         PH::print_stdout( " - PAN-OS APP-ID version: ".$panc_version );
         PH::print_stdout( array( $panc_version ), false, "PAN-OS APP-ID version" );
 
+        if( $this->pan->timezone !== null )
+            PH::print_stdout( " - PAN-OS Device timezone: ".$this->pan->timezone ." is used. actual time: ".date('Y/m/d H:i:s') );
+
         /*
         //if API and Git store it
         if( isset(PH::$args['git']) && PH::$args['git'] )
